--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -2,3 +2,9 @@
     position: relative;
     top : 30px
 }
+.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    padding: 5px;
+}
