--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -8,3 +8,11 @@
     top: 0;
     padding: 5px;
 }
+.flexEnd{
+    display: flex;
+    justify-content: end;
+}
+.flexCenter{
+    display: flex;
+    justify-content: center;
+}
